# lessons-learnt-from-gen-ai-career-break

./: .gitattributes  .gitignore  .integration-test-coveragerc  .pre-commit-config.yaml  .unit-test-coveragerc  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  REFACTORING_PLAN.md  TODO.md  pyproject.toml  tasks.py  tox.ini
.claude/: settings.local.json
.claude/agents/: feature-design.md  feature-discovery.md  feature-requirements.md  feature-spec.md  feature-tasks.md  pr-review-analyzer.md
.claude/commands/: feature-design.md  feature-discovery.md  feature-requirements.md  feature-tasks.md  feature.md  review-pr.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh
.github/: dependabot.yml
.github/actions/ci-steps/: action.yml
.github/actions/devcontainer-check/: action.yml
.github/actions/multi-python-tests/: action.yml
.github/workflows/: devcontainer-weekly.yml  main.yml  pr.yml
blog/part_2/: CROSS_PLATFORM_REMEDIATION_PLAN.md  README_REVIEW.md
blog/part_3/amazon_q_rules_samples/: DBG001.md  TST005.md  coding-style.md  communication-style.md
blog/part_3/kiro_spec_example/: design.md  requirements.md  tasks.md
features/devcontainer/: design.md  discovery.md  requirements.md  tasks.md
project/: __init__.py  deptry.py  precommit.py  project.py  project_task_runner.py  project_tasks.py  testing.py  utils.py
project/tasks/: __init__.py  actionlint.py  devcontainer.py  mypy.py  pipaudit.py  poetry.py  precommit.py  ruff.py  testing.py  trivy.py  vulture.py  xenon.py
src/lessons_learnt/: __init__.py  example.py
tests/: __init__.py
tests/integration/: test_example_integration.py
tests/unit/: test_actionlint.py  test_deptry.py  test_example.py  test_mypy.py  test_pipaudit.py  test_poetry.py  test_precommit.py  test_project.py  test_ruff.py  test_testing.py  test_vulture.py  test_xenon.py
tests/unit/project/: test_project.py  test_project_task_runner.py
tests/unit/project/tasks/: test_actionlint.py  test_deptry.py  test_devcontainer.py  test_mypy.py  test_pipaudit.py  test_poetry.py  test_precommit.py  test_ruff.py  test_testing.py  test_trivy.py  test_vulture.py  test_xenon.py
